styling the header fixed and on top (z-index)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body {
 header {
     background-color: yellow;
     font-family: 'Roboto', sans-serif;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    position: fixed;
+    z-index: 999;
+    width: 100%;
 
 }
 
